# wasmfuzz

./: .gitignore  Cargo.toml  Dockerfile  README.md  trophy-case.md
.github/workflows/: build-and-test.yml  release.yml
eval/: container-runner.py  hq-run-one.py  hq-submit.py  pass-stats.py  requirements.txt
harness-suite/: .dockerignore  .gitignore  Dockerfile  Makefile  crates-most-downloaded.py  make-one.py  stacktrace-from-log.py  suite-crashers.py  suite-run.py  suite-tag.py  suite-update.py  tags.csv
harness-suite/crashes/: zip2-fuzz_write.wasm
harness-suite/projects-clike/bloaty/: bloaty.patch  build.sh  fix-wasi-exceptions.patch  fix-zlib-static.patch  prepare.sh  third-party-absl.patch
harness-suite/projects-clike/brotli/: build.sh  prepare.sh
harness-suite/projects-clike/cmark-gfm/: build.sh  cmark-fuzz.c  prepare.sh  wasm.patch
harness-suite/projects-clike/expat/: build.sh  disable-lpm-harness.patch  fix_link_args.patch  prepare.sh
harness-suite/projects-clike/freetype2/: build.sh  freetype-stub-sjlj.patch  libarchive-stubs.patch  prepare.sh
harness-suite/projects-clike/fuzzer-challenges/: build.sh  prepare.sh
harness-suite/projects-clike/graphite/: build.sh  prepare.sh
harness-suite/projects-clike/hunspell/: build.sh  fix_harness.patch  prepare.sh  stub_clock.patch
harness-suite/projects-clike/jbig2dec/: build.sh  fix-image-pixel-bounds.patch  jbig2_fuzzer.cc  prepare.sh
harness-suite/projects-clike/jsoncpp/: build.sh  patch_eh.patch  prepare.sh
harness-suite/projects-clike/lcms/: build.sh  prepare.sh
harness-suite/projects-clike/libarchive/: build.sh  fixes.patch  libarchive_fuzzer2.cc  libarchive_stubs.patch  libxml2-stub-dup.patch  prepare.sh
harness-suite/projects-clike/libpng/: build.sh  hook_png_error.patch  libpng_read_fuzzer_disable_setjmp.patch  prepare.sh
harness-suite/projects-clike/libsndfile/: build.sh  prepare.sh  wasm_harness_without_entrypoint.patch
harness-suite/projects-clike/libtiff/: build.sh  libjpeg-turbo-skip-example.patch  prepare.sh
harness-suite/projects-clike/libwebp/: advanced_api_fuzzer2.c  blub.patch  build.sh  dwebp_fuzzer.c  prepare.sh  wasm.patch
harness-suite/projects-clike/libxml2/: build.sh  fix-schema-harness.patch  fix_schema_harness.patch  prepare.sh  stub-dup.patch
harness-suite/projects-clike/lzma/: build.sh  fix-armt-short-input-oob.patch  limit_allocs_more.patch  prepare.sh  stub-crc-for-fuzzing.patch
harness-suite/projects-clike/mbedtls/: build.sh  prepare.sh  wasm-mbedtls.patch  wasm-tf-psa-crypto.patch  wasm_stubs.patch
harness-suite/projects-clike/openjpeg/: build.sh  fix-pi-decode-alloc.patch  fix-stream-byte-left.patch  prepare.sh  stub_clocks.patch
harness-suite/projects-clike/openssl/: build.sh  fuzzer-hashtable-sequence-of-ops.patch  fuzzers-stdio-h.patch  prepare.sh  stub-fuzzer-error-prints.patch  wasi-config.patch
harness-suite/projects-clike/openthread/: build.sh  disable-nexus-tests.patch  fix-harness-include.patch  prepare.sh  wasm-tcplp.patch
harness-suite/projects-clike/pcre2/: build.sh  fuzzer-dont-rlimit-stack.patch  prepare.sh
harness-suite/projects-clike/sqlite/: build.sh  prepare.sh
harness-suite/projects-clike/stb/: build.sh  prepare.sh
harness-suite/projects-clike/vorbis/: build.sh  fix-decodevs-add-zero-dim.patch  prepare.sh
harness-suite/projects-clike/woff2/: build.sh  prepare.sh
harness-suite/projects-clike/zlib/: build.sh  prepare.sh  zlib_uncompress_fuzzer.c
harness-suite/projects-rust/askama/: prepare.sh
harness-suite/projects-rust/bincode/: prepare.sh
harness-suite/projects-rust/borsh/: 0001-cargo-fuzz.patch  prepare.sh
harness-suite/projects-rust/capnproto-rust/: fix-arena-check-offset-overflow.patch  prepare.sh
harness-suite/projects-rust/claxon/: 0001-update-fuzzers.patch  prepare.sh
harness-suite/projects-rust/comrak/: apply-clippy.patch  fix-cm-write_prefix.patch  fix-harness-all_options.patch  fix-harnesses.patch  prepare.sh
harness-suite/projects-rust/firefox/: prepare.sh
harness-suite/projects-rust/fontations/: fix-fvar-oob.patch  (+1 more)
harness-suite/scripts/: build-rust-harness.py  git-checkout-pin.sh  git-clone-rev.sh  postprocess-outputs.sh  prepare-toolchain.sh  set-buildflags.sh
src/: cow_memory.rs  main.rs  simple_bus.rs  tests.rs  util.rs
src/cli/: cmin.rs  concolic_explore.rs  cov_html.rs  covexp.rs  doctor.rs  lcov.rs  misc_eval.rs  mod.rs  monitor_cov.rs  tmin.rs
src/concolic/: bitwuzla_backend.rs  mod.rs  ops.rs  smtlib_backend.rs  smtlib_helpers.rs  z3_backend.rs
src/fuzzer/: exhaustive.rs  i2s_patches.rs  metrics.rs  mod.rs  opts.rs  orc.rs  worker.rs  worker_schedule.rs
src/instrumentation/: call_params.rs  cmpcov.rs  code_coverage.rs  feedback_lattice.rs  input_size.rs  instruction_limit.rs  mem.rs  mod.rs  path_hash.rs  perffuzz.rs  swarm.rs  traits.rs
src/ir/: debuginfo_helper.rs  heuristics.rs  mod.rs  operators.rs  parse.rs  parse_cfg.rs  wasmfuzz_abi.rs
src/jit/: builtins.rs  concolic.rs  control.rs  feedback.rs  function.rs  instance.rs  instrumentation.rs  memory.rs  misc.rs  mod.rs  module.rs  numeric.rs  signals.rs  tracing.rs  util.rs  vmcontext.rs
templates/: coverage_html.js  file.html  index.html  style.css  style.scss
wasm-fuzzers/: Dockerfile  Dockerfile.aflpp-w2c2  Dockerfile.aflpp-wasm2c  Dockerfile.e9afl-wasm2c  Dockerfile.fuzzm  Dockerfile.libafl-libfuzzer-wasm2c  Dockerfile.libfuzzer-w2c2  Dockerfile.libfuzzer-wasm2c  Dockerfile.w2c2-base  Dockerfile.wafl  Dockerfile.wasm2c-base  Dockerfile.wasmfuzz  Dockerfile.wasmfuzz-rel  Makefile  afl++-w2c2.sh  afl++-wasm2c.sh  build-container.sh  e9afl-wasm2c.sh  fuzzm-wasmtime-0.20-fix-cpuid.patch  fuzzm.sh  libafl-libfuzzer-wasm2c.sh  libfuzzer-w2c2.sh  monitor-aflpp.py  monitor-libfuzzer.py  monitor.py  prepare-w2c2-fuzzer.sh  prepare-wasm2c-fuzzer.sh  run-afl-fuzz.sh  shim-for-wafl.sh  w2c2-wrapper.c  wafl-shim.ts  wafl.sh  wasm2c-wrapper.c  wasmfuzz.sh
wasm-fuzzers-env/: Dockerfile.aflpp-wasm2c  Dockerfile.libafl-libfuzzer-wasm2c  Dockerfile.wasmfuzz  Makefile  libfuzzer-wasm2c.sh  wasm2c-wrapper.c  wasmfuzz.sh
(+163 files in other folders)
