[package]
name = "wasmfuzz"
version = "0.1.0"
authors = []
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.83"

[dependencies]
wat = "1.0"
wasmparser = "0.223"
wasm-encoder = "0.223"
rustc-demangle = "0.1"
clap = { version = "4.4", features = ["derive"] }
md5 = "0.7"
rand = "0.8"
bitvec = "1.0.1"
roaring = "0.10.9"
target-lexicon = "0.13"
speedy = "0.8"
colored = "2.1"
anyhow = "1.0"
dirs = "6.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
gimli = { version = "0.31" }
# We pin symbolic since DWARFv5 embedded source code support was removed >.>
symbolic = { version = "12.11.1", features = ["demangle", "symcache"] }
symbolic-debuginfo = "=12.11.1"
rustc-hash = "2.0.0"
hexyl = "0.16"
humantime = "2.1"
humansize = "2.1"
crossbeam-channel = "0.5"
ordered-float = { version = "4.2", features = ["speedy"] }
decurse = "0.0.4"
rustix = { version = "0.38", features = ["mm", "param"] }
object = { version = "0.36", default-features = false, features = [
    "read_core",
    "compression",
    "wasm",
] }
ouroboros = "0.18.3"
libafl = { version = "0.15", default-features = false, features = [
    "std",
    "rand_trait",
] }
libafl_bolts = "0.15"
# cranelift is ~0.114
cranelift = { git = "https://github.com/Mrmaxmeier/wasmtime", branch = "cranelift-jit-reserve-vmem-area", features = [
    "jit",
    "module",
    "native",
    "frontend",
] }
libc = "0.2.158"

# feat:concolic
z3 = { version = "0.12.1", optional = true }
bitwuzla = { git = "https://github.com/Mrmaxmeier/bitwuzla-rs.git", optional = true }

# feat:with_mimalloc
mimalloc = { version = "0.1", optional = true, default-features = false }

# feat:reports
askama = { version = "0.12", optional = true }
lcov = { version = "0.8", optional = true }
syntect = { version = "5.1", optional = true }

# feat:compressed_harnesses
zstd = { version = "0.13.1", optional = true }


# enable via feat:tracy
tracy_full = "1.10.0"
# tracy_full = { path = "../_others/tracy_full", default-features = false, features = [
# 	"system-tracing", "context-switch-tracing", "sampling", "code-transfer",
#         "broadcast", "callstack-inlines", # "crash-handler" 
# ] }


[features]
default = ["reports", "compressed_harnesses"]
reports = ["askama", "lcov", "syntect"]
with_mimalloc = ["mimalloc"]
compressed_harnesses = ["zstd"]
concolic = []
concolic_bitwuzla = ["bitwuzla", "concolic"]
concolic_z3 = ["z3", "concolic"]
concolic_debug_verify = []
tracy = ["tracy_full/enable"]
full = [
    "reports",
    "compressed_harnesses",
    "concolic_z3",
    "concolic_bitwuzla",
    "with_mimalloc",
]


[profile.dev.package."cranelift"]
opt-level = 3
[profile.dev.package."cranelift-codegen"]
opt-level = 3
[profile.dev.package."regalloc2"]
opt-level = 3
[profile.dev.package."libafl"]
opt-level = 3
