[package]
name = "wasmfuzz"
version = "0.1.0"
authors = []
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.83"

[dependencies]
wat = "1.0"
wasmparser = "0.233"
rustc-demangle = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
md5 = "0.7"
rand = "0.9"
bitvec = "1.0.1"
roaring = "0.10.9"
target-lexicon = "0.13"
speedy = "0.8"
colored = "3.0"
anyhow = "1.0"
dirs = "6.0"
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
gimli = "0.31"
# We pin symbolic since DWARFv5 embedded source code support was removed >.>
symbolic = { version = "12.11.1", features = ["demangle", "symcache"] }
symbolic-debuginfo = "=12.11.1"
rustc-hash = "2.0.0"
hexyl = "0.16"
humantime = "2.1"
humansize = "2.1"
crossbeam-channel = "0.5"
ordered-float = { version = "5.0", features = ["speedy"] }
decurse = "0.0.4"
rustix = { version = "1.0", features = ["mm", "param", "fs"] }
object = { version = "0.36", default-features = false, features = [
    "read_core",
    "compression",
    "wasm",
] }
ouroboros = "0.18.3"
# NOTE: LibAFL tends to play it fast and loose with SemVer and version bumps.
#       We pin to an exact minor release in order to avoid breakage.
libafl = { version = "=0.15.3", default-features = false, features = [
    "std",
    "rand_trait",
] }
libafl_bolts = "0.15"
cranelift = { version = "0.120.0", features = [
    # cranelift = { path = "../wasmtime/cranelift/umbrella", package = "cranelift", features = [
    "jit",
    "module",
    "native",
    "frontend",
] }
libc = "0.2.158"

# feat:concolic
# Note: waiting for 0.3.1 upstream
smtlib = { git = "https://github.com/oeb25/smtlib-rs.git", rev = "72bd4038bc4f60b67808251bf3a4fd5aa212466f", optional = true}
z3 = { version = "0.12.1", optional = true }
bitwuzla = { git = "https://github.com/Mrmaxmeier/bitwuzla-rs.git", optional = true }

# feat:with_mimalloc
mimalloc = { version = "0.1", optional = true, default-features = false }

# feat:reports
askama = { version = "0.14", optional = true }
lcov = { version = "0.8", optional = true }
syntect = { version = "5.1", optional = true }

# feat:compressed_harnesses
zstd = { version = "0.13.1", optional = true }

# enable via feat:tracy
tracy_full = { version = "1.10.0", default-features = false, features = [
    "system-tracing",
    "context-switch-tracing",
    "sampling",
    "code-transfer",
    "broadcast",
    # "callstack-inlines",
    # "crash-handler"

    # Note: We want to disable the `crash-handler` feature but there isn't a release yet that has it.
    # https://github.com/nagisa/rust_tracy_client/pull/132
] }

[features]
default = ["reports", "compressed_harnesses"]
reports = ["askama", "lcov", "syntect"]
with_mimalloc = ["mimalloc"]
compressed_harnesses = ["zstd"]
concolic = ["smtlib"]
concolic_bitwuzla = ["bitwuzla", "concolic"]
concolic_z3 = ["z3", "concolic"]
concolic_debug_verify = []
tracy = ["tracy_full/enable"]
full = [
    "reports",
    "compressed_harnesses",
    "concolic_z3",
    "concolic_bitwuzla",
    "with_mimalloc",
]


[profile.dev.package."cranelift"]
opt-level = 3
[profile.dev.package."cranelift-codegen"]
opt-level = 3
[profile.dev.package."regalloc2"]
opt-level = 3
[profile.dev.package."libafl"]
opt-level = 3
